--- a/public/css/default.css
+++ b/public/css/default.css
@@ -71,3 +71,13 @@ body {
     height: 200px;
     background-color: #fff;
 }
+
+.msg-erro {
+    background: #ff4b4b;
+    color: white;
+    padding: 10px;
+    width: 80%;
+    border-radius: 6px;
+    margin-bottom: 10px;
+    font-size: 14px;
+}
