--- a/app/views/usuario/usuario.phtml
+++ b/app/views/usuario/usuario.phtml
@@ -1,20 +1,24 @@
 <div class="usuario-container">
+    
+    <?php if (!empty($erro)): ?>
+        <div class="msg-erro"><?= htmlspecialchars($erro) ?></div>
+    <?php endif; ?>
+
 
     <div class="perfil">
         <img src="https://www.nicepng.com/png/detail/933-9332131_profile-picture-default-png.png" alt="Foto de perfil">
     </div>
 
-    <p>Olá, seja bem-vindo <strong><?= $usuario['nome'] ?? '[USER]' ?></strong></p>
+    <p>Olá, seja bem-vindo <strong><?= $usuario['nome_usuario'] ?? '[USER]' ?></strong></p>
 
-    <input type="text" value="<?= $usuario['nome'] ?? 'Usuário Exemplo' ?>" disabled>
+    <input type="text" value="<?= $usuario['nome_usuario'] ?? 'Usuário Exemplo' ?>" disabled>
     <input type="email" value="<?= $usuario['email'] ?? 'email@exemplo.com' ?>" disabled>
-    <input type="text" value="<?= $usuario['login'] ?? 'LoginExemplo' ?>" disabled>
     <input type="password" value="******" disabled>
 
     <hr>
 
-    <p>Sua pontuação atual: <strong><?= $usuario['pontuacao'] ?? '500' ?> pontos</strong></p>
-    <p>Ranking atual: <strong><?= $usuario['ranking'] ?? '1°' ?></strong></p>
+    <p>Sua pontuação atual: <strong><?= $usuario['pontos_totais'] ?? '0' ?> pontos</strong></p>
+    <p>Ranking atual: <strong><?= $usuario['ranking'] ?? 'NULL' ?></strong>°</p>
 
     <div class="links-container">
         <a href="/quiz" class="btn-jogar">Jogar</a>
@@ -29,19 +33,31 @@
 <div class="modal" id="editModal">
     <div class="modal-content">
 
-        <span class="modal-close-x" onclick="closeModal()">⨉</span>
+        <span class="modal-close-x">⨉</span>
 
         <h3>Editar Cadastro</h3>
 
-        <form action="/usuario/atualizar" method="POST">
-            <input type="text" name="nome" placeholder="Nome" required>
-            <input type="text" name="login" placeholder="Login" required>
-            <input type="password" name="senha" placeholder="Senha" required>
+        <form action="/atualizar" method="POST">
+
+            <input type="text" 
+                name="nome" 
+                placeholder="Nome" 
+                value="<?= $usuario['nome_usuario'] ?? '' ?>" 
+                required>
+
+            <input type="password" 
+                name="senha" 
+                placeholder="Nova senha (deixe em branco se não quiser alterar)">
+
+            <input type="password" 
+                name="confirm" 
+                placeholder="Confirme a nova senha">
 
             <button type="submit" class="modal-close">Salvar</button>
         </form>
     </div>
 </div>
+
 
 
 
