--- a/app/views/quiz/quiz.phtml
+++ b/app/views/quiz/quiz.phtml
@@ -14,11 +14,16 @@
         <a href="/usuario"><img src="/img/logo.png" alt="FutQuiz Logo"></a>
 
         <nav>
-            <a href="/">Início</a>
             <a href="/usuario">Usuário</a>
             <a href="/ranking">Ranking</a>
             <a href="/logout">Sair</a>
         </nav>
+
+        <div class="perfil">
+            <img src="https://www.nicepng.com/png/detail/933-9332131_profile-picture-default-png.png" alt="Foto de perfil">
+
+            <p class="nome-user"><?= $usuario['nome_usuario'] ?? '[USER]' ?></p>
+        </div>
     </header>
 
     <main class="container">
@@ -46,7 +51,7 @@
     <footer class="rodape">
         <div class="info-footer">
             <p>FutQuiz &copy; <?php echo date('Y'); ?> - Todos os direitos reservados</p>
-            <p>Desenvolvido por <strong>Diego</strong> </p>
+            <p>Desenvolvido por <strong><a href="https://github.com/Dieegoo13">Diego</a></strong> </p>
         </div>
     </footer>
 </body>
