--- a/app/views/quiz/quiz.phtml
+++ b/app/views/quiz/quiz.phtml
@@ -6,23 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FutQuiz</title>
     <link rel="stylesheet" href="/css/quiz.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
 </head>
 
 <body>
 
     <header>
-        <a href="/usuario"><img src="/img/logo.png" alt="FutQuiz Logo"></a>
+        <div class="logo">
+            <a href="/usuario"><img src="/img/logo.png" alt="FutQuiz Logo"></a>
+        </div>
 
-        <nav>
+        <div class="menu-toggle" id="menu-toggle">
+            <i class="fa-solid fa-bars"></i>
+        </div>
+
+        <nav id="navMenu">
             <a href="/usuario">Usuário</a>
             <a href="/ranking">Ranking</a>
             <a href="/logout">Sair</a>
         </nav>
 
-        <div class="perfil">
-            <img src="https://www.nicepng.com/png/detail/933-9332131_profile-picture-default-png.png" alt="Foto de perfil">
+        <div class="perfil" id="perfilMenu">
+            <a href="/usuario"><img src="https://www.nicepng.com/png/detail/933-9332131_profile-picture-default-png.png" alt="Foto de perfil"></a>
 
-            <p class="nome-user"><?= $usuario['nome_usuario'] ?? '[USER]' ?></p>
+            <!-- Nome REAL do usuário logado -->
+            <p class="nome-user"><?= $usuario['nome_usuario'] ?? "Usuário" ?></p>
         </div>
     </header>
 
@@ -35,7 +43,9 @@
 
         <div class="pergunta">
             <p><strong id="contador">1/10</strong></p>
-            <p><strong>Pergunta:</strong> <span id="texto-pergunta"></span></p>
+            <p><strong>Pergunta:</strong> 
+                <span id="texto-pergunta">Carregando...</span>
+            </p>
         </div>
 
         <div class="opcoes">
@@ -47,14 +57,16 @@
 
     </main>
 
-
     <footer class="rodape">
         <div class="info-footer">
-            <p>FutQuiz &copy; <?php echo date('Y'); ?> - Todos os direitos reservados</p>
-            <p>Desenvolvido por <strong><a href="https://github.com/Dieegoo13">Diego</a></strong> </p>
+            <p>FutQuiz &copy; <?= date("Y") ?> - Todos os direitos reservados</p>
+            <p>Desenvolvido por <strong><a href="https://github.com/Dieegoo13">Diego</a></strong></p>
         </div>
     </footer>
-</body>
 
     <script src="/js/quiz.js"></script>
+    <script src="/js/main.js"></script>
+
+</body>
+
 </html>
